BJS2-96444 fix