@@ -1,47 +1,55 @@
 package school.faang.user_service.repository.mentorship.exception;
 
 import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.bind.annotation.ResponseStatus;
 import school.faang.user_service.exception.DataValidationException;
 import school.faang.user_service.exception.ForbiddenException;
-import school.faang.user_service.repository.mentorship.dto.ErrorResponse;
+import school.faang.user_service.repository.mentorship.dto.ErrorResponseDto;
 
 import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @ControllerAdvice
 public class GlobalExceptionHandler {
 
     @ExceptionHandler(ForbiddenException.class)
-    public ResponseEntity<String> handleForbidden(ForbiddenException ex) {
-        return ResponseEntity.status(HttpStatus.FORBIDDEN).body(ex.getMessage());
+    @ResponseStatus(HttpStatus.FORBIDDEN)
+    public ErrorResponseDto handleForbidden(ForbiddenException ex) {
+        return new ErrorResponseDto(
+                "FORBIDDEN",
+                ex.getMessage(),
+                List.of(),
+                LocalDateTime.now());
     }
 
     @ExceptionHandler(DataValidationException.class)
-    public ResponseEntity<String> handleValidation(DataValidationException ex) {
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(ex.getMessage());
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ErrorResponseDto handleValidation(DataValidationException ex) {
+        return new ErrorResponseDto(
+                "DATA_VALIDATION_ERROR",
+                ex.getMessage(),
+                List.of(),
+                LocalDateTime.now());
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ErrorResponse> handleValidationExceptions(
+    @ResponseStatus(HttpStatus.BAD_REQUEST)
+    public ErrorResponseDto handleValidationExceptions(
             MethodArgumentNotValidException ex) {
 
         List<String> errors = ex.getBindingResult()
                 .getFieldErrors()
                 .stream()
                 .map(error -> error.getField() + ": " + error.getDefaultMessage())
-                .collect(Collectors.toList());
+                .toList();
 
-        ErrorResponse errorResponse = new ErrorResponse(
+        return new ErrorResponseDto(
                 "VALIDATION_FAILED",
-                "Validation failed for one or more fields",
-                errors,
-                LocalDateTime.now()
-        );
-        return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(errorResponse);
+                ex.getMessage(),
+                List.of(),
+                LocalDateTime.now());
     }
 }
